Java 21 release day: finish Vector API