@@ -158,6 +158,52 @@ For more information on this feature, see [JEP 440](https://openjdk.org/jeps/440
 
 ### JEP 443: Unnamed Patterns and Variables (Preview)
 
+Data processing in Java has become increasingly streamlined since the introduction of [records](https://openjdk.org/jeps/395) and [record patterns](#jep-440-record-patterns). But in some cases writing out an entire record pattern when some record component aren't even used in the logic that follows can be both cumbersome and confusing. Consider the following code example: 
+
+```java
+static boolean isDelayTimeEqualToReverbRoomSize(EffectLoop effectLoop) {
+    if (effectLoop instanceof EffectLoop(Delay(int timeInMs), Reverb(String name, int roomSize))) {
+        return timeInMs == roomSize;
+    }
+    return false;
+}
+```
+
+Here, the logic doesn't reference the reverb name whatsoever, but Java currently doesn't support a way to indicate that this omission might be intentional. And so the entire record pattern has been written out, leading future readers of this code to doubt the correctness of the implementation.
+
+#### Unnamed Patterns
+
+JEP 443 proposes _unnamed patterns_, which could improve the situation here:
+
+```java
+static boolean isDelayTimeEqualToReverbRoomSize(EffectLoop effectLoop) {
+    if (effectLoop instanceof EffectLoop(Delay(int timeInMs), Reverb(_, int roomSize))) {
+        return timeInMs == roomSize;
+    }
+    return false;
+}
+```
+
+The underscore denotes the unnamed pattern here: it is an unconditional pattern which binds nothing. You can use it to indicate that it doesn't matter to what first value the pattern matches the `Reverb`, as long as the second parameter can be matched to an `int`.
+
+#### Unnamed Pattern Variables
+
+_Unnamed pattern variables_ are also proposed by this JEP. You can use them whenever you care about the type your record pattern will match, but you don't actually need any value bound to the  pattern variable. Imagine we want our tuner code to also support tuning piano keys in the future, then we could use unnamed pattern variables like this:
+
+```java
+static void apply(Effect effect, Piano piano) {
+    System.out.println(switch(effect) {
+        case Tuner(FlatNote _), Tuner(SharpNote _) -> "Tuning one of the black keys...";
+        case Tuner(RegularNote _) -> "Tuning one of the white keys...";
+        default -> "An unknown effect is active...";
+    });
+}
+```
+
+Here, we execute specific logic when we encounter a tuner that tunes a flat (♭) or sharp (♯) note. We use an unnamed pattern variable, because the logic acts on the matched type only - the value can be ignored.
+
+#### Unnamed Variables
+
 TODO
 
 #### What's Different From Java 20?
@@ -422,7 +468,7 @@ For more information on this feature, see [JEP 444](https://openjdk.org/jeps/444
 Java's current implementation of concurrency is _unstructured_, meaning that tasks run independently of each other. They don't come with any hierarchy, scope, or other structure, which means they cannot easily pass errors or cancellation intent to each other.
 To illustrate this, let's look at a code example that takes place in a restaurant:
 
-> All code examples that illustrate Structured Concurrency or Scoped Values were taken from my conference talk ["Java's Concurrency Journey Continues! Exploring Structured Concurrency and Scoped Values"](https://hanno.codes/talks/#javas-concurrency-journey-continues-exploring-structured-concurrency-and-scoped-values).
+> All code examples that illustrate Structured Concurrency were taken from my conference talk ["Java's Concurrency Journey Continues! Exploring Structured Concurrency and Scoped Values"](https://hanno.codes/talks/#javas-concurrency-journey-continues-exploring-structured-concurrency-and-scoped-values).
 
 ```java
 public class MultiWaiterRestaurant implements Restaurant {
@@ -569,11 +615,43 @@ For more information on this feature, see [JEP 453](https://openjdk.org/jeps/453
 
 ### JEP 446: Scoped Values (Preview)
 
-TODO
+*Scoped values* enable the sharing of immutable data within and across threads.
+They are preferred to thread-local variables, especially when using large numbers of virtual threads.
+
+#### ThreadLocal
+
+Since Java 1.2 we can make use of `ThreadLocal` variables, which confine a certain value to the thread that created it. Back then it could be a simple way to achieve thread-safety, [in some cases](https://stackoverflow.com/a/817926).
+
+But thread-local variables also come with a few caveats. Every thread-local variable is mutable, which makes it hard to discern which component updates shared state and in what order. There's also the risk of memory leaks, because unless you call `remove()` on the `ThreadLocal` the data is retained until it is garbage collected (which is only after the thread terminates). And finally, thread-local variables of a parent thread can be inherited by child threads, which results in the child thread having to allocate storage for every thread-local variable previously written in the parent thread.
+
+These drawbacks become more apparent now that virtual threads have been introduced, because millions of them could be active at the same time - each with their own thread-local variables - which would result in a significant memory footprint.
+
+#### Scoped Values
+
+Like a thread-local variable, a scoped value has multiple incarnations, one per thread. Unlike a thread-local variable, a scoped value is written once and is then immutable, and is available only for a bounded period during execution of the thread.
+
+The JEP illustrates the use of scoped values with the pseudo code example below:
+
+```java
+final static ScopedValue<...> V = ScopedValue.newInstance();
+
+// In some method
+ScopedValue.where(V, <value>)
+           .run(() -> { ... V.get() ... call methods ... });
+
+// In a method called directly or indirectly from the lambda expression
+... V.get() ...
+```
+
+We see that `ScopedValue.where(...)` is called, presenting a scoped value and the object to which it is to be bound. The call to `run(...)` binds the scoped value, providing an incarnation that is specific to the current thread, and then executes the lambda expression passed as argument. During the lifetime of the `run(...)` call, the lambda expression, or any method called directly or indirectly from that expression, can read the scoped value via the value’s `get()` method. After the `run(...)` method finishes, the binding is destroyed.
+
+#### Typical Use Cases
+
+Scoped values will be useful in all places where currently thread-local variables are used for the purpose of one-way transmission of unchanging data. 
 
 #### What's Different From Java 20?
 
-TODO
+The only difference from Java 20 is that Scoped Values has become a Preview API in Java 21, which means you'll need to add the `--enable-preview` flag to the command-line to be able to take the feature for a spin.
 
 #### More Information
 
@@ -590,11 +668,75 @@ Java 21 contains two features that originated from [Project Panama](http://openj
 
 ### JEP 442: Foreign Function & Memory API (Third Preview)
 
-TODO
+Java programs have always had the option of interacting with code and data outside of the Java runtime.
+We could use the [Java Native Interface](https://docs.oracle.com/javase/8/docs/technotes/guides/jni/) (JNI) to invoking foreign functions (outside of the JVM but on the same machine).
+And accessing foreign memory (outside of the JVM, so off-heap) was possible using either the [ByteBuffer API](https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/nio/ByteBuffer.html) or the [sun.misc.Unsafe API](https://github.com/openjdk/jdk/blob/master/src/jdk.unsupported/share/classes/sun/misc/Unsafe.java).
+
+However, these three mechanisms all come with their own drawbacks, which is why a more modern API is now proposed to support foreign functions and foreign memory in a better way.
+
+> Performance-critical libraries like [Tensorflow](https://github.com/tensorflow/tensorflow), [Lucene](https://lucene.apache.org/) or [Netty](https://netty.io/) typically rely on using foreign memory, because they need more control over the memory they use to prevent the cost and unpredictability that comes with garbage collection.
+
+#### Code Example
+
+In order to demonstrate the new API, [JEP 434](https://openjdk.org/jeps/434) lists a code example that obtains a method handle for a C library function `radixsort` and then uses it to sort four strings that start out as Java array elements:
+
+```java
+// 1. Find foreign function on the C library path
+Linker linker          = Linker.nativeLinker();
+SymbolLookup stdlib    = linker.defaultLookup();
+MethodHandle radixsort = linker.downcallHandle(stdlib.find("radixsort"), ...);
+// 2. Allocate on-heap memory to store four strings
+String[] javaStrings = { "mouse", "cat", "dog", "car" };
+// 3. Use try-with-resources to manage the lifetime of off-heap memory
+try (Arena offHeap = Arena.openConfined()) {
+    // 4. Allocate a region of off-heap memory to store four pointers
+    MemorySegment pointers = offHeap.allocateArray(ValueLayout.ADDRESS, javaStrings.length);
+    // 5. Copy the strings from on-heap to off-heap
+    for (int i = 0; i < javaStrings.length; i++) {
+        MemorySegment cString = offHeap.allocateUtf8String(javaStrings[i]);
+        pointers.setAtIndex(ValueLayout.ADDRESS, i, cString);
+    }
+    // 6. Sort the off-heap data by calling the foreign function
+    radixsort.invoke(pointers, javaStrings.length, MemorySegment.NULL, '\0');
+    // 7. Copy the (reordered) strings from off-heap to on-heap
+    for (int i = 0; i < javaStrings.length; i++) {
+        MemorySegment cString = pointers.getAtIndex(ValueLayout.ADDRESS, i);
+        javaStrings[i] = cString.getUtf8String(0);
+    }
+} // 8. All off-heap memory is deallocated here
+assert Arrays.equals(javaStrings, new String[] {"car", "cat", "dog", "mouse"});  // true
+```
+
+TODO: update this code example from the JEP.
+
+Let's look at some of the types this code uses in more detail to get a rough idea of their function and purpose within the Foreign Function & Memory API:
+
+`Linker`
+: Provides access to foreign functions from Java code, and access to Java code from foreign functions. It allows Java code to link against foreign functions, via *downcall method handles*. It also allows foreign functions to call Java method handles, via the generation of *upcall stubs*. See the [JavaDoc](https://download.java.net/java/early_access/jdk20/docs/api/java.base/java/lang/foreign/Linker.html) of this type for more information.
+
+`SymbolLookup`
+: Retrieves the address of a symbol in one or more libraries. See the [JavaDoc](https://download.java.net/java/early_access/jdk20/docs/api/java.base/java/lang/foreign/SymbolLookup.html) of this type for more information.
+
+`Arena`
+: Controls the lifecycle of memory segments. An arena has a scope, called the arena scope. When the arena is closed, the arena scope is no longer alive. As a result, all the segments associated with the arena scope are invalidated, their backing memory regions are deallocated (where applicable) and can no longer be accessed after the arena is closed. See the [JavaDoc](https://download.java.net/java/early_access/jdk20/docs/api/java.base/java/lang/foreign/Arena.html) of this type for more information.
+
+`MemorySegment`
+: Provides access to a contiguous region of memory. There are two kinds of memory segments: *heap segments* (inside the Java memory heap) and *native segments* (outside of the Java memory heap). See the [JavaDoc](https://download.java.net/java/early_access/jdk20/docs/api/java.base/java/lang/foreign/MemorySegment.html) of this type for more information. 
+
+`ValueLayout`
+: Models values of basic data types, such as *integral* values, *floating-point* values and *address* values. On top of that, it defines useful value layout constants for Java primitive types and addresses. See the [JavaDoc](https://download.java.net/java/early_access/jdk20/docs/api/java.base/java/lang/foreign/ValueLayout.html) of this type for more information.
 
 #### What's Different From Java 20?
 
-TODO
+In Java 20, this feature was in its second preview status (in the form of [JEP 434](https://openjdk.org/jeps/434)), so the language feature was complete and developer feedback was gathered. Based on this feedback the following changes happened to Java 21:
+
+* Centralized the management of the lifetimes of native segments in the `Arena` interface;
+* Enhanced layout paths with a new element to dereference address layouts;
+* Provided a linker option to optimize calls to functions that are short-lived and will not upcall to Java (e.g., `clock_gettime`);
+* Provided a fallback native linker implementation, based on libffi, to facilitate porting; and
+* Removed the `VaList` class.
+
+TODO: streamline the above.
 
 #### More Information
 
@@ -602,11 +744,68 @@ For more information on this feature, see [JEP 442](https://openjdk.org/jeps/442
 
 ### JEP 448: Vector API (Sixth Incubator)
 
-TODO
+The Vector API makes it possible to express vector computations that reliably compile at runtime to optimal vector instructions. 
+This means that these computations will significantly outperform equivalent scalar computations on the supported CPU architectures (x64 and AArch64).
+
+#### Vector Computations? Help Me Out Here!
+
+A *vector computation* is a mathematical operation on one or more one-dimensional matrices of an arbitrary length. Think of a vector as an array with a dynamic length. Furthermore, the elements in the vector can be accessed in constant time via indices, just like with an array. 
+
+In the past, Java programmers could only program such computations at the assembly-code level. But now that modern CPUs support advanced [SIMD](https://en.wikipedia.org/wiki/Single_instruction,_multiple_data) features (Single Instruction, Multiple Data), it becomes more important to take advantage of the performance gains that SIMD instructions and multiple lanes operating in parallel can bring. The Vector API brings that possibility closer to the Java programmer.
+
+#### Code Example
+
+Here is a code example (taken from the JEP) that compares a simple scalar computation over elements of arrays with its equivalent using the Vector API:
+
+```java
+void scalarComputation(float[] a, float[] b, float[] c) {
+   for (int i = 0; i < a.length; i++) {
+        c[i] = (a[i] * a[i] + b[i] * b[i]) * -1.0f;
+   }
+}
+
+static final VectorSpecies<Float> SPECIES = FloatVector.SPECIES_PREFERRED;
+
+void vectorComputation(float[] a, float[] b, float[] c) {
+    int i = 0;
+    int upperBound = SPECIES.loopBound(a.length);
+    for (; i < upperBound; i += SPECIES.length()) {
+        // FloatVector va, vb, vc;
+        var va = FloatVector.fromArray(SPECIES, a, i);
+        var vb = FloatVector.fromArray(SPECIES, b, i);
+        var vc = va.mul(va)
+                   .add(vb.mul(vb))
+                   .neg();
+        vc.intoArray(c, i);
+    }
+    for (; i < a.length; i++) {
+        c[i] = (a[i] * a[i] + b[i] * b[i]) * -1.0f;
+    }
+}
+```
+
+From the perspective of the Java developer, this is just another way of expressing scalar computations. It might come across as being more verbose, but on the other hand it can bring spectacular performance gains. 
+
+#### Typical Use Cases
+
+The Vector API provides a way to write complex vector algorithms in Java that perform extremely well, such as vectorized `hashCode` implementations or specialized array comparisons. Numerous domains can benefit from this, including machine learning, linear algebra, encryption, text processing, finance, and code within the JDK itself.
+
+#### What's Different From Java 19?
+
+
+
+  the alignment of this feature with [Project Valhalla](https://openjdk.org/projects/valhalla/) is the biggest difference with Java 19. And it's one that makes a lot of sense, as both the Vector API and Project Valhalla focus on performance improvements. 
+
+> Recall that Project Valhalla's aim is to augment the Java object model with value objects and user-defined primitives, combining the abstractions of object-oriented programming with the performance characteristics of simple primitives. 
+
+Once the features of Project Valhalla are available, the Vector API will be adapted to make use of value objects and by that time it will be promoted to a preview feature.
 
 #### What's Different From Java 20?
 
-TODO
+Aside from a minor set of enhancements in the API, the biggest differences with Java 20 are:
+
+* Add the exclusive or (xor) operation to vector masks.
+* Improve the performance of vector shuffles, especially when used to rearrange the elements of a vector and when converting between vectors.
 
 #### More Information
 
@@ -883,4 +1082,7 @@ There is a bit more to this API than we were able to cover here (like different 
 
 ## Final thoughts
 
-TODO
+JDK 21: 15 JEPs delivered. Plus thousands of performance, stability and other updates!!
+Java continues to focus on performance, stability, security and compatibility/maintainability.
+
+TODO: finish the wrap-up.
